<?xml version='1.0' encoding='UTF-8'?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ing.bankguarantees</groupId>
    <artifactId>BankGuaranteesBEOnline_API</artifactId>
    <version>1.0.0</version>
    <modules>
        <module>conf</module>
        <module>web</module>
    </modules>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.ing.apisdk</groupId>
        <artifactId>merak-spring-boot-starter-parent_2.13</artifactId>
        <version>33.1.0</version>
    </parent>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
        <lombok.version>1.18.38</lombok.version>
        <engagement-suit.version>6.5.8</engagement-suit.version>
        <shedlock.version>7.7.0</shedlock.version>
        <kafkaclient.version>4.3.1</kafkaclient.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <tomcat-embed-core.version>11.0.25</tomcat-embed-core.version>
        <yawk-lz4-java.version>1.10.2</yawk-lz4-java.version>
        <qos.logback.version>1.5.35</qos.logback.version>
        <apache-collection.version>4.5.0</apache-collection.version>
        <asertj-version>3.27.7</asertj-version>
        <spring-kafka.version>3.3.16</spring-kafka.version>
        <netty-handler.version>4.2.17.Final</netty-handler.version>
        <core-jackson-databind.version>2.21.5</core-jackson-databind.version>
        <tools-jackson-databind.version>3.1.5</tools-jackson-databind.version>
        <log4j-api.version>2.25.5</log4j-api.version>
        <httpcore5.version>5.4.3</httpcore5.version>
        <httpclient5.version>5.6.4</httpclient5.version>

        <plugins.jacoco.version>0.8.12</plugins.jacoco.version>
        <plugins.maven.surefire.version>3.5.3</plugins.maven.surefire.version>
        <maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
        <avro-maven.version>1.12.0</avro-maven.version>
    </properties>

    <dependencyManagement>

        <dependencies>

            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafkaclient.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.kafka</groupId>
                <artifactId>spring-kafka</artifactId>
                <version>${spring-kafka.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ing.tpa.esuite.oee</groupId>
                <artifactId>oee-external-feedback-event</artifactId>
                <version>${engagement-suit.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ing.tpa.esuite.oee</groupId>
                <artifactId>oee-engagement-suite-notification-event</artifactId>
                <version>${engagement-suit.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>${lombok-mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>${aspectj.version}</version>
            </dependency>

            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-spring</artifactId>
                <version>${shedlock.version}</version>
            </dependency>

            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-provider-jdbc-template</artifactId>
                <version>${shedlock.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${apache-collection.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${httpclient5.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <distributionManagement>
        <repository>
            <id>P31464-incoming-maven</id>
            <url>https://pkgs.dev.azure.com/IngEurCDaaS01/IngOne/_packaging/P31464-incoming-maven/maven/v1</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>P31464-incoming-maven</id>
            <url>https://pkgs.dev.azure.com/IngEurCDaaS01/IngOne/_packaging/P31464-incoming-maven/maven/v1</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>P31464-incoming-maven</id>
            <url>https://pkgs.dev.azure.com/IngEurCDaaS01/IngOne/_packaging/P31464-incoming-maven/maven/v1</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${plugins.jacoco.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <argLine>
                            @{argLine}
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
                        </argLine>
                        <environmentVariables>
                            <LOG_PATH>${project.build.directory}/logs</LOG_PATH>
                        </environmentVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>
                            @{argLine}
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
                        </argLine>
                        <environmentVariables>
                            <LOG_PATH>${project.build.directory}/logs</LOG_PATH>
                        </environmentVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.avro</groupId>
                    <artifactId>avro-maven-plugin</artifactId>
                    <version>${avro-maven.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>